minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft
    spec:
      volumes:
        - name: world
          persistentVolumeClaim:
            claimName: minecraft-world-pvc
      containers:
        - name: minecraft
          image: itzg/minecraft-server:java17-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: world
              mountPath: /data
          ports:
            - name: game-port
              containerPort: 25565
              hostPort: 25565
          resources:
            requests:
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 1
              memory: 2Gi
