minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minecraft
  ports:
    - port: 25565
      targetPort: game-port
